--- a/style/style.css
+++ b/style/style.css
@@ -24,6 +24,7 @@ img { display: block; }
     width: 62%;
     margin: auto;
     margin-bottom: 0.5cm;
+    color: var(--text-color);
 }
 
 #imageCenter{
