--- a/style/about.css
+++ b/style/about.css
@@ -6,6 +6,12 @@ body{
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
+:root{
+    --main-bg-color: antiquewhite;
+    --text-color:black;
+    --align-center: center;
+}
+
 #center{
     text-align: var(--align-center,center);
 }
