--- a/style/about.css
+++ b/style/about.css
@@ -1,7 +1,7 @@
 html,
 body{
     margin: 0;
-    background-color: var(--main-bg-color);
+    background-color: antiquewhite;
     font-size: medium;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
