--- a/style/style.css
+++ b/style/style.css
@@ -34,6 +34,8 @@ img {
     display:inline-block;
     background-color: transparent;
     outline:none;
+    background-repeat:no-repeat;
+    border: none;
 }
 
 #imageCenter{
