--- a/style/about.css
+++ b/style/about.css
@@ -8,7 +8,7 @@ body{
 
 :root{
     --main-bg-color: antiquewhite;
-    --text-color:black;
+    --text-color:brown;
     --align-center: center;
 }
 
