--- a/style/about.css
+++ b/style/about.css
@@ -12,8 +12,8 @@ body{
     --align-center: center;
 }
 ul{
-    display: table;
-    margin: 0 auto;
+    text-align: center;
+    list-style: inside;
 }
 
 .center{
