--- a/style/about.css
+++ b/style/about.css
@@ -33,7 +33,7 @@ body{
 
 #backbutton{
     
-    background-color: transparent;
+    background-color: beige;
     outline:none;
     background-repeat:no-repeat;
     border: none;
